[gd_scene load_steps=18 format=2]

[ext_resource path="res://fundo_4.tscn" type="PackedScene" id=1]
[ext_resource path="res://perso.gd" type="Script" id=2]
[ext_resource path="res://Imagens_novas/Knight/Knight_Sprites_Walk1-2.png" type="Texture" id=3]
[ext_resource path="res://Imagens_novas/Knight/Knight_Sprites_Walk2-2.png" type="Texture" id=4]
[ext_resource path="res://Imagens_novas/Knight/Knight_Sprites_Statue.png" type="Texture" id=5]
[ext_resource path="res://Imagens_novas/Interface.png" type="Texture" id=6]
[ext_resource path="res://Minecraft.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://imagens/Ambient Statue Knight logo low.png" type="Texture" id=8]
[ext_resource path="res://Sound_Design/SFX/SFX_Player_Passos.ogg" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 1.7
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "statue",
"speed": 5.0
} ]

[sub_resource type="BitMap" id=2]
data = {
"data": PoolByteArray(  ),
"size": Vector2( 0, 0 )
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1000, 1000 )

[sub_resource type="Animation" id=4]
resource_name = "texto"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Instructions2:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=8]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("start:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ -1, 0 ]
}

[node name="Tela_inicial" type="Node"]

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="perso" type="KinematicBody2D" parent="."]
position = Vector2( 298.569, 895.708 )
script = ExtResource( 2 )

[node name="sprites_kina" type="AnimatedSprite" parent="perso"]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="Camera2D" type="Camera2D" parent="perso"]
position = Vector2( 501.715, -276.516 )
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="touch" type="TouchScreenButton" parent="perso"]
position = Vector2( 621.979, -283.248 )
bitmask = SubResource( 2 )
shape = SubResource( 3 )

[node name="fundo" type="ParallaxBackground" parent="."]

[node name="instrucoes" type="Node" parent="fundo"]

[node name="fundo" type="Sprite" parent="fundo/instrucoes"]
position = Vector2( 1001.11, 461.45 )
scale = Vector2( 1.04296, 1.04296 )
texture = ExtResource( 6 )

[node name="anim_text" type="AnimationPlayer" parent="fundo/instrucoes"]
autoplay = "texto"
anims/texto = SubResource( 4 )

[node name="Instructions" type="Label" parent="fundo/instrucoes"]
margin_left = 176.086
margin_top = 123.236
margin_right = 273.086
margin_bottom = 139.236
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Instructions:"

[node name="Instructions2" type="Label" parent="fundo/instrucoes"]
anchor_right = 0.88
margin_left = -78.1761
margin_top = 277.625
margin_right = -1437.78
margin_bottom = 350.625
grow_horizontal = 0
grow_vertical = 2
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Touch the screen to turn into 
statue mode. The monsters
attack in rithm defend it as 
statue."
align = 1
percent_visible = 0.0

[node name="statue_knight" type="Sprite" parent="fundo"]
position = Vector2( 1367, 310.43 )
texture = ExtResource( 8 )

[node name="start" type="Node" parent="fundo"]

[node name="start" type="Label" parent="fundo/start"]
margin_left = 879.272
margin_top = 662.621
margin_right = 1085.27
margin_bottom = 678.621
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Turn statue to begin."
align = 1

[node name="anim_text" type="AnimationPlayer" parent="fundo/start"]
autoplay = "text"
anims/text = SubResource( 8 )

[node name="passos" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true
[connection signal="pressed" from="perso/touch" to="perso" method="_on_touch_pressed"]
